--- a/Quotify/en.lproj/QuotifyViewController.xib
+++ b/Quotify/en.lproj/QuotifyViewController.xib
@@ -555,10 +555,12 @@
 							<reference key="NSNextKeyView" ref="377435320"/>
 							<bool key="IBUIOpaque">NO</bool>
 							<bool key="IBUIClipsSubviews">YES</bool>
-							<int key="IBUIContentMode">4</int>
 							<bool key="IBUIMultipleTouchEnabled">YES</bool>
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-							<reference key="IBUIImage" ref="992548952"/>
+							<object class="NSCustomResource" key="IBUIImage">
+								<string key="NSClassName">NSImage</string>
+								<string key="NSResourceName">settingsbackground1.png</string>
+							</object>
 						</object>
 						<object class="IBUINavigationBar" id="377435320">
 							<reference key="NSNextResponder" ref="795017958"/>
@@ -566,7 +568,7 @@
 							<string key="NSFrame">{{1, 0}, {320, 44}}</string>
 							<reference key="NSSuperview" ref="795017958"/>
 							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView" ref="773230582"/>
+							<reference key="NSNextKeyView"/>
 							<string key="NSReuseIdentifierKey">_NS:260</string>
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							<object class="NSArray" key="IBUIItems">
@@ -574,39 +576,14 @@
 								<object class="IBUINavigationItem" id="295311509">
 									<reference key="IBUINavigationBar" ref="377435320"/>
 									<string key="IBUITitle">Settings</string>
+									<object class="IBUIBarButtonItem" key="IBUIRightBarButtonItem" id="599563046">
+										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+										<int key="IBUIStyle">2</int>
+										<reference key="IBUINavigationItem" ref="295311509"/>
+										<int key="IBUISystemItemIdentifier">0</int>
+									</object>
 									<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								</object>
-							</object>
-						</object>
-						<object class="IBUIButton" id="773230582">
-							<reference key="NSNextResponder" ref="795017958"/>
-							<int key="NSvFlags">292</int>
-							<string key="NSFrame">{{263, 4}, {51, 30}}</string>
-							<reference key="NSSuperview" ref="795017958"/>
-							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView" ref="38093726"/>
-							<object class="NSColor" key="IBUIBackgroundColor">
-								<int key="NSColorSpace">1</int>
-								<bytes key="NSRGB">MCAwIDAgMAA</bytes>
-							</object>
-							<bool key="IBUIOpaque">NO</bool>
-							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-							<int key="IBUIContentHorizontalAlignment">0</int>
-							<int key="IBUIContentVerticalAlignment">0</int>
-							<int key="IBUIButtonType">1</int>
-							<bool key="IBUIReversesTitleShadowWhenHighlighted">YES</bool>
-							<string key="IBUINormalTitle">Done</string>
-							<reference key="IBUIHighlightedTitleColor" ref="1004154975"/>
-							<reference key="IBUINormalTitleColor" ref="1014017644"/>
-							<reference key="IBUINormalTitleShadowColor" ref="439155114"/>
-							<object class="IBUIFontDescription" key="IBUIFontDescription">
-								<int key="type">1</int>
-								<double key="pointSize">13</double>
-							</object>
-							<object class="NSFont" key="IBUIFont">
-								<string key="NSName">Helvetica</string>
-								<double key="NSSize">13</double>
-								<int key="NSfFlags">16</int>
 							</object>
 						</object>
 						<object class="IBUITextField" id="809406309">
@@ -641,7 +618,7 @@
 						<object class="IBUILabel" id="38093726">
 							<reference key="NSNextResponder" ref="795017958"/>
 							<int key="NSvFlags">292</int>
-							<string key="NSFrame">{{20, 68}, {111, 21}}</string>
+							<string key="NSFrame">{{20, 68}, {115, 21}}</string>
 							<reference key="NSSuperview" ref="795017958"/>
 							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="809406309"/>
@@ -650,7 +627,7 @@
 							<int key="IBUIContentMode">7</int>
 							<bool key="IBUIUserInteractionEnabled">NO</bool>
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-							<string key="IBUIText">Email Address</string>
+							<string key="IBUIText">Email Address:</string>
 							<reference key="IBUITextColor" ref="1014017644"/>
 							<nil key="IBUIHighlightedColor"/>
 							<int key="IBUIBaselineAdjustment">1</int>
@@ -1095,15 +1072,6 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">backToQuoteEntry:</string>
-						<reference key="source" ref="773230582"/>
-						<reference key="destination" ref="372490531"/>
-						<int key="IBEventType">7</int>
-					</object>
-					<int key="connectionID">93</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">fbButtonClicked:</string>
 						<reference key="source" ref="330462889"/>
 						<reference key="destination" ref="372490531"/>
@@ -1180,6 +1148,14 @@
 						<int key="IBEventType">7</int>
 					</object>
 					<int key="connectionID">235</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">backToQuoteEntry:</string>
+						<reference key="source" ref="599563046"/>
+						<reference key="destination" ref="372490531"/>
+					</object>
+					<int key="connectionID">240</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -1301,19 +1277,13 @@
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<reference ref="809406309"/>
-							<reference ref="38093726"/>
 							<reference ref="330462889"/>
-							<reference ref="773230582"/>
-							<reference ref="607047037"/>
 							<reference ref="377435320"/>
+							<reference ref="38093726"/>
+							<reference ref="607047037"/>
 						</object>
 						<reference key="parent" ref="19867892"/>
 						<string key="objectName">SettingsView</string>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">89</int>
-						<reference key="object" ref="773230582"/>
-						<reference key="parent" ref="795017958"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">95</int>
@@ -1475,12 +1445,21 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">233</int>
 						<reference key="object" ref="295311509"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="599563046"/>
+						</object>
 						<reference key="parent" ref="377435320"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">234</int>
 						<reference key="object" ref="879634299"/>
 						<reference key="parent" ref="89788679"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">239</int>
+						<reference key="object" ref="599563046"/>
+						<reference key="parent" ref="295311509"/>
 					</object>
 				</object>
 			</object>
@@ -1523,6 +1502,7 @@
 					<string>232.IBPluginDependency</string>
 					<string>233.IBPluginDependency</string>
 					<string>234.IBPluginDependency</string>
+					<string>239.IBPluginDependency</string>
 					<string>27.IBPluginDependency</string>
 					<string>27.IBUIButtonInspectorSelectedStateConfigurationMetadataKey</string>
 					<string>31.IBPluginDependency</string>
@@ -1533,8 +1513,6 @@
 					<string>84.IBPluginDependency</string>
 					<string>84.IBUIButtonInspectorSelectedStateConfigurationMetadataKey</string>
 					<string>88.IBPluginDependency</string>
-					<string>89.IBPluginDependency</string>
-					<string>89.IBUIButtonInspectorSelectedStateConfigurationMetadataKey</string>
 					<string>92.IBPluginDependency</string>
 					<string>95.IBPluginDependency</string>
 					<string>96.IBPluginDependency</string>
@@ -1577,6 +1555,7 @@
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<real value="1"/>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<real value="0.0"/>
@@ -1586,8 +1565,6 @@
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<real value="0.0"/>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<real value="0.0"/>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -1605,7 +1582,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">238</int>
+			<int key="maxID">240</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1994,6 +1971,7 @@
 				<string>quotebubble.png</string>
 				<string>quotifybuttondown.png</string>
 				<string>quotifybuttonup.png</string>
+				<string>settingsbackground1.png</string>
 				<string>settingsdown.png</string>
 				<string>settingsup.png</string>
 			</object>
@@ -2007,6 +1985,7 @@
 				<string>{574, 258}</string>
 				<string>{556, 90}</string>
 				<string>{556, 90}</string>
+				<string>{642, 918}</string>
 				<string>{83, 83}</string>
 				<string>{37, 37}</string>
 			</object>
